--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^12.3.1",
     "react-icons": "^4.9.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
