--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.29.0",
     "sass": "^1.63.3",
     "slick-carousel": "^1.8.1",
